Fix difficulty alignment

--- a/static/sass/_cards.scss
+++ b/static/sass/_cards.scss
@@ -166,6 +166,8 @@
     background-position-y: 5px;
     background-repeat: no-repeat;
     display: inline-block;
+    margin-top: 10px;
+    margin-bottom: -10px;
     margin-left: 3px;
     text-indent: -99999px;
     width: 75px;
